# strawberry

./: .gitignore  Makefile.am  README.md  configure.ac
src/strawberryd/: Makefile.am  main.c
src/strawberryd/config/: config.c  config.h
src/strawberryd/system/: daemon.c  daemon.h  rlim.c  rlim.h
systemd/: note.txt  strawberryd.service
